force-app/main/default/objects/smagicinteract__License_Feature_Matrix__c/smagicinteract__License_Feature_Matrix__c.object-meta.xml
<CustomObject>
    <label>License Feature Matrix</label>
    <nameField>
        <label>License Feature Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Feature Matrices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>