force-app/main/default/objects/smagicinteract__License_Feature_Matrix__c/fields/smagicinteract__Feature__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Feature__c</fullName>
    <label>Feature</label>
    <referenceTo>smagicinteract__Feature__c</referenceTo>
    <relationshipLabel>License Feature Matrices</relationshipLabel>
    <relationshipName>License_Feature_Matrices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>