force-app/main/default/objects/smagicinteract__License_Feature_Matrix__c/fields/smagicinteract__Is_Addon__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Is_Addon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Addon</label>
    <type>Checkbox</type>
</CustomField>