force-app/main/default/objects/smagicinteract__License_Feature_Matrix__c/fields/smagicinteract__License_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__License_Type__c</fullName>
    <label>License Type</label>
    <referenceTo>smagicinteract__License_Type__c</referenceTo>
    <relationshipLabel>License Feature Matrices</relationshipLabel>
    <relationshipName>License_Feature_Matrices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>